@@ -260,7 +260,7 @@ Play an audio track on a cdrom disk.
 CD.quit() -> None
 </tt></font><ul>
 After you are completely finished with a cdrom device, you
-can use this <a href=pygame_cdrom.html#quit>quit()</a> function to free access to the drive.
+can use this <a href=pygame.html#quit>quit()</a> function to free access to the drive.
 This will be cleaned up automatically when the cdrom module is.
 uninitialized. It is safe to call this function on an uninitialized CD.
 </ul><br>&nbsp;<br>
